# tplot

./: .gitignore  .tplot.state  Cargo.toml  DESIGN.md  LICENSE  README.md
.kiro/agents/: kairn.json
.kiro/skills/: architecture-decision.md  async-pattern.md  deferred-implementation.md  estimate-task.md  fix-bug.md  implement-feature.md
.kiro/steering/: steering.md
nodes/: plot_top_ips.tcl  test.tcl  top_ips.tcl  ufw.tcl
nodes/000/: node.tcl
nodes/000/000/: node.tcl
nodes/000/001/: node.tcl
recipes/: filesystem_stats.tcl  network_connections.tcl  plotting_examples.tcl  ssh_auth_failures.tcl  syslog_events.tcl
src/: app.rs  cmd_completer.rs  completion_source.rs  completions.rs  engine.rs  handler.rs  help.rs  jobs.rs  lib.rs  lineage_data.rs  live_node.rs  main.rs  node.rs  node_behavior.rs  node_id.rs  node_state.rs  plot.rs  registry.rs  registry2.rs  session.rs  slots.rs  sql_analysis.rs  status.rs  workspace.rs
src/mcp/: agent_patch.rs  bridge.rs  commands.rs  mod.rs  server.rs  socket_path.rs
src/scripting/: bridge.rs  mod.rs
src/views/: cmd_editor.rs  help.rs  library.rs  lineage_tree.rs  mod.rs  placeholder.rs  plot.rs  repl.rs  table.rs
tests/: basic_ops.rs  dropdown_completion.rs  helpers.rs  user_workflow.rs
