[package]
name = "tplot"
version = "0.1.0"
edition = "2021"

[dependencies]
txv-core = { git = "https://github.com/rotmistrk/txv.git" }
txv-render = { git = "https://github.com/rotmistrk/txv.git" }
txv-widgets = { git = "https://github.com/rotmistrk/txv.git" }
txv-edit = { git = "https://github.com/rotmistrk/txv.git" }
rusticle = { git = "https://github.com/rotmistrk/rusticle.git" }
duckdb = { version = "1.0", features = ["bundled"] }
libc = "0.2"
sqlparser = "0.52"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3.15"
